shell: Avoid reserving a screen edge if no surface role has been created yet

Check QWindow::isExposed() as in other places. If the surface role object
has been created, isExposed() will return true.

BUG: 482399


(cherry picked from commit 472c5790b88cfeaa0d2fece73088d1203ac18da9)